@@ -39,7 +39,15 @@ endif::[]
 [[unreleased]]
 ==== Unreleased
 
+[float]
+===== Added
+
 - Add and read sampling info from Tracestate headers {pull}858[#858]
+
+[float]
+===== Changed
+
+- Align the default value of `sanitize_field_names` with other agents {pull}867[#867]
 
 [[release-notes-3.10.1]]
 ==== 3.10.1 (2020-08-26)
